--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,9 @@
 ---
 layout: page
-title: Tags
+title: 标签
 header:
 group: navigation
 ---
-
 
 <div class="col-sm-3">
     <ul class="nav nav-tabs-left">
